# macro

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DECISIONS.md  README.md
buffet_indicator/: .dockerignore  .gitattributes  .gitignore  BACKLOG_v11_2_3.md  BLOCKED_v11_2_stages_4_8_session_budget.md  DECISIONS.md  Dockerfile  LC_V1_SPRINT_CLOSEOUT_REPORT.md  POST_V11_3_0_CI_HOTFIX_REPORT.md  POST_V11_3_0_STABILIZATION_REPORT.md  PROGRESS_v11_2_2_and_v11_3.md  PROGRESS_v11_2_3_combined.md  README.md  README_DEPLOY.md  README_v11_4_BRANCH.md  RESOLVED_v11_2_stages_4_8.md  REVIEW_PACKAGE.md  REVIEW_PACKAGE_v10.0.md  REVIEW_PACKAGE_v11.0.1.md  REVIEW_PACKAGE_v11.0.2.md  REVIEW_PACKAGE_v11.0.md  REVIEW_PACKAGE_v11.0b.md  REVIEW_PACKAGE_v11.0c.md  REVIEW_PACKAGE_v11.1.1.md  REVIEW_PACKAGE_v11.1.md  REVIEW_PACKAGE_v11.2.1.md  REVIEW_PACKAGE_v11.2.2.md  REVIEW_PACKAGE_v11.2_stat.md  REVIEW_PACKAGE_v4.1.md  REVIEW_PACKAGE_v4.2.md  REVIEW_PACKAGE_v4.md  REVIEW_PACKAGE_v5.0.md  REVIEW_PACKAGE_v6.0.md  REVIEW_PACKAGE_v7.0.md  REVIEW_PACKAGE_v8a.1.md  REVIEW_PACKAGE_v8a.3.md  REVIEW_PACKAGE_v8a.md  REVIEW_PACKAGE_v8b.1.md  REVIEW_PACKAGE_v8b.md  REVIEW_PACKAGE_v9.0.md  (+12 more)
buffet_indicator/logs/: v11_2_prereg_sha.txt  v11_2_progress.md
buffet_indicator/outputs/: SPRINT_v11_4_INDEX.md  lc_v1_composites.parquet  lc_v1_composites_truncate.parquet  lc_v1_diagnostic_panel.html  lc_v1_verdict.json  lc_v2_display_fail.md  lc_v2_verdict.json  lc_v2_verdict.json.sha256  lc_v2_verdict_blk1_baseline.json  lc_v2_verdict_blk1_baseline.json.sha256  lc_v2_verdict_blk1_delta.md  lc_v2_verdict_closeout.json  lc_v2_verdict_closeout.json.sha256  lc_v2_verdict_closeout_delta.md  lc_v2_verdict_summary.md  pinned_test_verification.md  test_count_snapshot.md  v11_4_sprint_engineering_closeout.md
buffet_indicator/reviews/: PHASE_2_diagnosis_notes.md  PHASE_3_svg_nan_findings.md  README_v11_4_reviewer_archive.md  REVIEW_Codex_v12_design_round5_implementation_correctness.md  (+16 more)
(+476 files in other folders)
