[project]
name = "buffett-ingestion"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

# E402 (module-import-not-at-top-of-file) is suppressed in test and script
# files because both use a `sys.path.insert(0, _PROJECT_ROOT)` bootstrap
# before importing src.* (required when scripts/foo.py is invoked directly).
# See tests/scripts/test_sys_path_bootstrap.py for the lock-in rule.
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"scripts/**/*.py" = ["E402"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
markers = ["integration: hits real network -- opt in via INTEGRATION_TESTS=1"]
